fix: :bug: make greyscale backgrunds work on iOS maybe

--- a/public/resources/scss/index.scss
+++ b/public/resources/scss/index.scss
@@ -183,6 +183,9 @@ html {
       background: var(--bg) no-repeat center center;
       background-size: cover;
     }
+    &.cache-only:before {
+      filter: grayscale(1);
+    }
   }
 }
 
